--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lite-server": "^2.6.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "bootstrap": "^5.1.3"
   }
 }
